new section add

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
             <h1 class="headertitel">All Thinks Are <br>
                 Possible If You <br>
                 believe</h1>
-            <p class="headerdiscription">There are many variations of passages of Lorem Ipsum <br>
+            <p class="headerdiscription">There are many variations of passages of Lorem Ipsum
+                <br>
                 available, but the majority have suffered alteration in some <br>
-                form, by injected humour, or randomised words</p>
+                form, by injected humour, or randomised words
+            </p>
             <p class="headerbnt"><button class="bntprimary">Contact Us</button></p>
 
 
@@ -120,6 +122,64 @@
         </section>
 
 
+        <section class="why">
+            <h1 class="whytitel">Why Choose Us</h1>
+
+            <div class="whyus">
+                <div class="chooseus">
+                    <h3 class="choosetitel">
+                        Help
+                    </h3>
+                    <p class="chooseinfo">Far far away, behind the word mountains, far from the countries Vokalia and
+                        Consonantia, there
+                        live
+                        the
+                        blind texts.</p>
+
+                </div>
+
+
+                <div class="chooseus">
+                    <h3 class="choosetitel">
+                        Trust
+                    </h3>
+
+                    <p class="chooseinfo">Far far away, behind the word mountains, far from the countries Vokalia and
+                        Consonantia, there live
+                        the
+                        blind texts.</p>
+                </div>
+
+
+                <div class="chooseus">
+                    <h3 class="choosetitel">
+                        Friendly People
+                    </h3>
+
+                    <p class="chooseinfo">Far far away, behind the word mountains, far from the countries Vokalia and
+                        Consonantia, there live
+                        the
+                        blind texts.</p>
+                </div>
+
+
+                <div class="chooseus">
+                    <h3 class="choosetitel">
+                        Parties
+                    </h3>
+
+                    <p class="chooseinfo">Far far away, behind the word mountains, far from the countries Vokalia and
+                        Consonantia, there live
+                        the
+                        blind texts.</p>
+                </div>
+
+
+            </div>
+
+        </section>
+
+
         <!-- call now section-->
         <section class="call">
 
@@ -129,6 +189,8 @@
             <button> <a href="#">call now</a></button>
 
         </section>
+
+
 
     </main>
 
